--- a/styles/Contact.module.css
+++ b/styles/Contact.module.css
@@ -62,13 +62,93 @@
     background: none;
 }
 
+.content div{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 13rem;
+    height: 100vh;
+    /* border: 1px solid #000000; */
+    box-shadow: gray 2px 2px 10px;
+    border-radius: 15px;
+
+}
+
 .content h3 {
 
     color: #000000;
-    font-size: 3rem;
-    font-weight: 700;
+    font-size: 2rem;
+    font-weight: 500;
     text-align: center;
-    margin-top: 5rem;
+    /* margin-top: 5rem; */
     z-index: 1;
+    padding-bottom: 1rem;
     text-transform: capitalize;
+}
+
+.content form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 1rem;
+    background: none;
+    width: 50rem;
+}
+
+.content form input {
+    width: 90%;
+    height: 3rem;
+    border: none;
+    border-radius: 5px;
+    margin-bottom: 1rem;
+    padding-left: 1rem;
+    font-size: 1.5rem;
+    font-weight: 700;
+    background: none;
+    border: 1px solid #000000;
+
+}
+
+
+
+.content form textarea {
+    width: 90%;
+    height: 10rem;
+    border: none;
+    border-radius: 5px;
+    margin-bottom: 1rem;
+    padding-left: 1rem;
+    font-size: 1.5rem;
+    font-weight: 700;
+    background: none;
+    border: 1px solid #000000;
+}
+
+.content form button {
+    width: 12rem;
+    height: 3rem;
+    border: none;
+    border-radius: 5px;
+    margin: 1rem;
+    padding: auto;
+    font-size: 1.5rem;
+    font-weight: 700;
+    background: none;
+    border: 1px solid #000000;
+    cursor: pointer;
+    transition: all 1s ease-in-out;
+    border: none;
+    background: rgb(255, 254, 254);
+    box-shadow: gray 0px 0px 6px;
+}
+
+.content form button:hover {
+    background-color: #01c4fe;
+    color: #ffffff;
+}
+
+.content form button:focus {
+    outline: none;
 }
