--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -43,3 +43,13 @@
     /* margin-right: 1px; */
     color: black;
 }
+
+.toggle button.focus {
+    background-color: white;
+    @apply rounded-full;
+    margin-top: 1px;
+    margin-bottom: 1px;
+    width: 98.5%;
+    /* margin-right: 1px; */
+    color: black;
+}
